--- a/org/troikagame/troikagame.cfg
+++ b/org/troikagame/troikagame.cfg
@@ -1,5 +1,7 @@
 DEBUG = True
 DEBUG_WITH_APTANA = False
+SECRET_KEY = 'development key'
+DB_PREFIX = 'mysql://'
 DB_HOST = 'localhost'
 DB_NAME = 'tgdev'
 DB_USER = 'tg'
