Configuration file now works as it should.

--- a/org/troikagame/troikagame.cfg
+++ b/org/troikagame/troikagame.cfg
@@ -1,6 +1,7 @@
 DEBUG = True
 DEBUG_WITH_APTANA = False
 SECRET_KEY = 'development key'
+DB_DNS = 'sqlite:////home/ttiurani/devel/test.db'
 DB_PREFIX = 'mysql://'
 DB_HOST = 'localhost'
 DB_NAME = 'tgdev'
