Changed from JQuery Mobile to Bootstrap

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ org/troikagame/venv/*
 org/troikagame/.project
 org/troikagame/.pydevproject
 org/troikagame/.settings/*
+org/troikagame/.externalToolBuilders
