--- a/org/troikagame/troikagame.cfg
+++ b/org/troikagame/troikagame.cfg
@@ -1,9 +1,18 @@
+# Debug values
 DEBUG = True
 DEBUG_WITH_APTANA = False
+
+# Secret key for creating sessions
 SECRET_KEY = 'development key'
-#DB_DNS = 'sqlite:////home/ttiurani/devel/test.db'
+
+# Database settings
+# DNS can be used to override other values
+# DB_DNS = 'sqlite:////home/ttiurani/devel/test.db'
 DB_PREFIX = 'mysql://'
 DB_HOST = 'localhost'
 DB_NAME = 'tgdev'
 DB_USER = 'tg'
 DB_PASSWORD = 'tgpwd'
+
+# Troika Game specific values
+ACTIVATABLE_BEFORE_THREE = False
