Added rest of layout

--- a/org/troikagame/troikagame.cfg
+++ b/org/troikagame/troikagame.cfg
@@ -14,5 +14,15 @@ DB_NAME = 'tgdev'
 DB_USER = 'tg'
 DB_PASSWORD = 'tgpwd'
 
+# Mail settings
+MAIL_SKIP = True
+MAIL_SERVER = 'localhost'
+MAIL_PORT = 25
+MAIL_USE_TLS = True
+MAIL_USE_SSL = False
+MAIL_USERNAME = None
+MAIL_PASSWORD = None
+DEFAULT_MAIL_SENDER = 'webmaster@troikagame.org'
+
 # Troika Game specific values
-ACTIVATABLE_BEFORE_THREE = False
+ACTIVATABLE_BEFORE_THREE = True
