Cleaned up a bit

--- a/org/troikagame/troikagame.cfg
+++ b/org/troikagame/troikagame.cfg
@@ -7,7 +7,7 @@ SECRET_KEY = 'development key'
 
 # Database settings
 # DNS can be used to override other values
-DB_DNS = 'sqlite:////home/ttiurani/devel/test.db'
+# DB_DNS = 'sqlite:////home/ttiurani/devel/test.db'
 DB_PREFIX = 'mysql://'
 DB_HOST = 'localhost'
 DB_NAME = 'tgdev'
