Renamed troikagame to troikealearning

--- a/org/troikalearning/troikalearning.cfg
+++ b/org/troikalearning/troikalearning.cfg
@@ -22,7 +22,7 @@ MAIL_USE_TLS = True
 MAIL_USE_SSL = False
 MAIL_USERNAME = None
 MAIL_PASSWORD = None
-DEFAULT_MAIL_SENDER = 'webmaster@troikagame.org'
+DEFAULT_MAIL_SENDER = 'webmaster@troikalearning.org'
 
-# Troika Game specific values
+# Troika specific values
 ACTIVATABLE_BEFORE_THREE = True
