Changed tg to tl also in database connections

--- a/org/troikalearning/troikalearning.cfg
+++ b/org/troikalearning/troikalearning.cfg
@@ -10,9 +10,9 @@ SECRET_KEY = 'development key'
 # DB_DNS = 'sqlite:////home/ttiurani/devel/test.db'
 DB_PREFIX = 'mysql://'
 DB_HOST = 'localhost'
-DB_NAME = 'tgdev'
-DB_USER = 'tg'
-DB_PASSWORD = 'tgpwd'
+DB_NAME = 'tldev'
+DB_USER = 'tl'
+DB_PASSWORD = 'tlpwd'
 
 # Mail settings
 MAIL_SKIP = True
