--- a/org/troikalearning/troikalearning.cfg
+++ b/org/troikalearning/troikalearning.cfg
@@ -24,5 +24,9 @@ MAIL_USERNAME = None
 MAIL_PASSWORD = None
 DEFAULT_MAIL_SENDER = 'webmaster@troikalearning.org'
 
+# Babel settings
+BABEL_DEFAULT_LOCALE = 'fi'
+BABEL_DEFAULT_TIMEZONE = 'fi'
+
 # Troika specific values
 ACTIVATABLE_BEFORE_THREE = True
