Automatically activate Troika when all needed information is set. i18n fixes.

--- a/org/troikalearning/troikalearning.cfg
+++ b/org/troikalearning/troikalearning.cfg
@@ -26,7 +26,7 @@ DEFAULT_MAIL_SENDER = 'webmaster@troikalearning.org'
 
 # Babel settings
 BABEL_DEFAULT_LOCALE = 'fi'
-BABEL_DEFAULT_TIMEZONE = 'fi'
+BABEL_DEFAULT_TIMEZONE = 'Europe/Helsinki'
 
 # Troika specific values
-ACTIVATABLE_BEFORE_THREE = True
+ACTIVATABLE_BEFORE_THREE = False
