--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,13 @@
         <artifactId>scala-library</artifactId>
         <version>${scala.version}</version>
       </dependency>
-
+      
+      <dependency>
+        <groupId>org.webjars</groupId>
+        <artifactId>angularjs</artifactId>
+        <version>1.1.2</version>
+      </dependency>
+      
       <!-- Test -->
       <dependency>
         <groupId>org.scalatest</groupId>
@@ -43,6 +49,7 @@
 
   <modules>
     <module>backend</module>
+    <module>frontend</module>
   </modules>
 
   <build>
@@ -52,6 +59,21 @@
           <groupId>net.alchim31.maven</groupId>
           <artifactId>scala-maven-plugin</artifactId>
           <version>3.1.1</version>
+        </plugin>
+        <plugin>
+          <groupId>org.lesscss</groupId>
+          <artifactId>lesscss-maven-plugin</artifactId>
+          <version>1.3.0</version>
+        </plugin>
+        <plugin>
+          <groupId>com.github.searls</groupId>
+          <artifactId>jasmine-maven-plugin</artifactId>
+          <version>1.2.0.0</version>
+        </plugin>
+        <plugin>
+          <groupId>ro.isdc.wro4j</groupId>
+          <artifactId>wro4j-maven-plugin</artifactId>
+          <version>1.6.2</version>
         </plugin>
       </plugins>
     </pluginManagement>
