--- a/frontend/core/pom.xml
+++ b/frontend/core/pom.xml
@@ -39,6 +39,29 @@
         </configuration>
       </plugin>
       <plugin>
+        <groupId>com.github.searls</groupId>
+        <artifactId>jasmine-maven-plugin</artifactId>
+        <version>1.2.0.0</version>
+        <extensions>true</extensions>
+        <executions>
+          <execution>
+            <goals>
+              <goal>test</goal>
+            </goals>
+          </execution>
+        </executions>
+        <configuration>
+          <jsSrcDir>${project.basedir}/src/main/webapp</jsSrcDir>
+          <jsTestSrcDir>${project.basedir}/src/test/webapp</jsTestSrcDir>
+          <sourceIncludes>
+            <include>lib/angularjs/angular.js</include>
+            <include>lib/angularjs/angular-mocks.js</include>
+            <include>**/*.coffee</include>
+            <include>*Spec.js</include>
+          </sourceIncludes>
+        </configuration>
+      </plugin>
+      <plugin>
         <groupId>ro.isdc.wro4j</groupId>
         <artifactId>wro4j-maven-plugin</artifactId>
         <executions>
