--- a/frontend/core/pom.xml
+++ b/frontend/core/pom.xml
@@ -13,15 +13,31 @@
   <packaging>war</packaging>
   <name>Extended Mind :: Frontend :: Core</name>
   <description>Extended Mind Frontend Core</description>
+  <url>https://github.com/extendedmind/extendedmind</url>
   <inceptionYear>2013</inceptionYear>
+  
   <licenses>
     <license>
-       <name>GNU Affero General Public License, Version 3</name>
-      <url>http://www.gnu.org/licenses/agpl-3.0.html</url>
+      <name>The Apache Software License, Version 2.0</name>
+      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
       <distribution>repo</distribution>
     </license>
   </licenses>
 
+  <scm>
+    <connection>scm:git:git@github.com:extendedmind/extendedmind.git</connection>
+    <url>scm:git:git@github.com:extendedmind/extendedmind.git</url>
+    <developerConnection>scm:git:git@github.com:extendedmind/extendedmind.git</developerConnection>
+  </scm>
+
+  <developers>
+    <developer>
+      <id>ttiurani</id>
+      <name>Timo Tiuraniemi</name>
+      <email>timo.tiuraniemi@iki.fi</email>
+    </developer>
+  </developers>
+  
   <build>
     <plugins>
       <plugin>
