--- a/pom.xml
+++ b/pom.xml
@@ -5,18 +5,39 @@
   <groupId>org</groupId>
   <artifactId>extendedmind</artifactId>
   <version>0.1-SNAPSHOT</version>
+  <packaging>pom</packaging>
   <name>Extended Mind</name>
   <description>Extended Mind Root</description>
   <inceptionYear>2013</inceptionYear>
-  <packaging>pom</packaging>
+  <url>https://github.com/extendedmind/extendedmind</url>
+
   <licenses>
     <license>
        <name>GNU Affero General Public License, Version 3</name>
       <url>http://www.gnu.org/licenses/agpl-3.0.html</url>
       <distribution>repo</distribution>
     </license>
+    <license>
+      <name>The Apache Software License, Version 2.0</name>
+      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+      <distribution>repo</distribution>
+    </license>
   </licenses>
 
+  <scm>
+    <connection>scm:git:git@github.com:extendedmind/extendedmind.git</connection>
+    <url>scm:git:git@github.com:extendedmind/extendedmind.git</url>
+    <developerConnection>scm:git:git@github.com:extendedmind/extendedmind.git</developerConnection>
+  </scm>  
+
+  <developers>
+    <developer>
+      <id>ttiurani</id>
+      <name>Timo Tiuraniemi</name>
+      <email>timo.tiuraniemi@iki.fi</email>
+    </developer>
+  </developers>
+  
   <properties>
     <maven.compiler.source>1.7</maven.compiler.source>
     <maven.compiler.target>1.7</maven.compiler.target>
