--- a/pom.xml
+++ b/pom.xml
@@ -2,6 +2,11 @@
   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
+  <parent>
+    <groupId>org.sonatype.oss</groupId>
+    <artifactId>oss-parent</artifactId>
+    <version>7</version>
+  </parent>
   <groupId>org</groupId>
   <artifactId>extendedmind</artifactId>
   <version>0.1-SNAPSHOT</version>
@@ -26,8 +31,8 @@
 
   <scm>
     <connection>scm:git:git@github.com:extendedmind/extendedmind.git</connection>
-    <url>scm:git:git@github.com:extendedmind/extendedmind.git</url>
     <developerConnection>scm:git:git@github.com:extendedmind/extendedmind.git</developerConnection>
+    <url>git@github.com:extendedmind/extendedmind.git</url>
   </scm>  
 
   <developers>
