--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -59,6 +59,17 @@
       <type>jar</type>
       <scope>compile</scope>
     </dependency>
+    
+	<dependency>
+        <groupId>ch.qos.logback</groupId>
+        <artifactId>logback-core</artifactId>
+        <version>0.9.30</version>
+    </dependency>
+    <dependency>
+        <groupId>ch.qos.logback</groupId>
+        <artifactId>logback-classic</artifactId>
+        <version>0.9.30</version>
+    </dependency>
 
     <!-- Test -->
     <dependency>
