--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -75,6 +75,14 @@
       <type>jar</type>
       <scope>compile</scope>
     </dependency>
+ 
+    <dependency>
+      <groupId>org.json4s</groupId>
+      <artifactId>json4s-jackson_${scala.version.short}</artifactId>
+      <version>3.2.4</version>
+      <type>jar</type>
+      <scope>compile</scope>
+    </dependency>
 
   	<dependency>
   		<groupId>com.typesafe.akka</groupId>
