--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -90,14 +90,14 @@
   		<version>2.2-M3</version>
   		<scope>compile</scope>
   	</dependency>
-  
+
   	<dependency>
   		<groupId>com.typesafe.akka</groupId>
   		<artifactId>akka-slf4j_${scala.version.short}</artifactId>
   		<version>2.2-M3</version>
   		<scope>compile</scope>
   	</dependency>
-  
+
   	<dependency>
         <groupId>ch.qos.logback</groupId>
         <artifactId>logback-core</artifactId>
@@ -117,10 +117,10 @@
       <type>jar</type>
       <scope>test</scope>
     </dependency>
-    
     <dependency>
       <groupId>org.scalatest</groupId>
       <artifactId>scalatest_${scala.version.short}</artifactId>
+      <type>jar</type>
       <scope>test</scope>
     </dependency>
   </dependencies>
