--- a/backend/src/main/resources/application.conf
+++ b/backend/src/main/resources/application.conf
@@ -1,4 +1,15 @@
+# Extended Mind Default configuration file.
+#
+# This file needs to be overridden in production with "-Dconfig.file=[]".
+
+extendedmind {
+  neo4j {
+    storeDir = "/tmp/temp-neo-test"
+  }
+}
+
 akka {
+  log-config-on-start = on
   loglevel = INFO
   event-handlers = ["akka.event.slf4j.Slf4jEventHandler"]
 }
