--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,11 @@
       <url>https://oss.sonatype.org/content/repositories/public</url>
     </repository>
     <repository>
+      <id>oss-sonatype-snapshots</id>
+      <name>OSS Sonatype Snapshots</name>
+      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+    </repository>
+    <repository>
       <id>typesafe</id>
       <name>Typesafe repository</name>
       <url>http://repo.typesafe.com/typesafe/releases</url>
