First test. NOTE: Subcut modifyBindings doesn't work for some reason

--- a/backend/src/main/resources/application.conf
+++ b/backend/src/main/resources/application.conf
@@ -9,9 +9,9 @@ extendedmind {
 }
 
 akka {
-  log-config-on-start = on
+  log-config-on-start = off
   loglevel = INFO
-  event-handlers = ["akka.event.slf4j.Slf4jEventHandler"]
+  loggers = ["akka.event.slf4j.Slf4jLogger"]
 }
 
 # check the reference.conf in spray-can/src/main/resources for all defined settings
