--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -169,6 +169,7 @@
 	  <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.14</version>
         <configuration>
           <skipTests>true</skipTests>
         </configuration>
