Cleaned frontend project. Moved static html content into mock JSON files. Jasmine tests for latest content.

--- a/frontend/core/pom.xml
+++ b/frontend/core/pom.xml
@@ -36,6 +36,11 @@
       <name>Timo Tiuraniemi</name>
       <email>timo.tiuraniemi@iki.fi</email>
     </developer>
+    <developer>
+      <id>jpsalo</id>
+      <name>JP Salo</name>
+      <email>jukapeka@gmail.com</email>
+    </developer>
   </developers>
   
   <build>
