--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,18 @@
     </repository>
   </repositories>
 
+
+  <dependencyManagement>
+    <dependencies>
+      <dependency>
+        <groupId>org.extendedmind</groupId>
+        <artifactId>backend</artifactId>
+        <version>${project.version}</version>
+        <type>test-jar</type>
+      </dependency>
+    </dependencies>
+  </dependencyManagement>
+
   <modules>
     <module>backend</module>
     <module>frontend</module>
@@ -116,6 +128,16 @@
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-clean-plugin</artifactId>
           <version>2.5</version>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-jar-plugin</artifactId>
+          <version>2.4</version>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-dependency-plugin</artifactId>
+          <version>2.8</version>
         </plugin>
       </plugins>
     </pluginManagement>
