--- a/frontend/core/pom.xml
+++ b/frontend/core/pom.xml
@@ -114,7 +114,8 @@
           <jsSrcDir>${project.basedir}/src/main/webapp/static</jsSrcDir>
           <jsTestSrcDir>${project.basedir}/src/main/webapp/test</jsTestSrcDir>
           <preloadSources>
-            <include>${project.basedir}/src/main/webapp/test/lib/jasmine-jquery.js</include>
+            <source>lib/jasmine-jquery.js</source>
+            <source>lib/jsonFixtures.js</source>
           </preloadSources>
           <sourceIncludes>
             <include>lib/jquery/jquery.js</include>
