--- a/backend/src/main/resources/application.conf
+++ b/backend/src/main/resources/application.conf
@@ -6,6 +6,9 @@ extendedmind {
   neo4j {
     storeDir = "/tmp/temp-neo-test"
   }
+  security {
+    tokenSecret= "0123456789012345"
+  }
 }
 
 akka {
