--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -1,6 +1,5 @@
 
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
@@ -18,7 +17,7 @@
 
   <licenses>
     <license>
-       <name>GNU Affero General Public License, Version 3</name>
+      <name>GNU Affero General Public License, Version 3</name>
       <url>http://www.gnu.org/licenses/agpl-3.0.html</url>
       <distribution>repo</distribution>
     </license>
@@ -39,7 +38,7 @@
   </developers>
 
   <dependencies>
-    
+
     <!-- Scala -->
     <dependency>
       <groupId>org.scala-lang</groupId>
@@ -69,7 +68,7 @@
       <type>jar</type>
       <scope>compile</scope>
     </dependency>
-	  <dependency>
+    <dependency>
       <groupId>io.spray</groupId>
       <artifactId>spray-json_${scala.version.short}</artifactId>
       <version>1.2.4</version>
@@ -99,7 +98,7 @@
       <type>jar</type>
       <scope>compile</scope>
     </dependency>
-    
+
     <!-- Scaldi -->
     <dependency>
       <groupId>com.github.scaldi</groupId>
@@ -116,7 +115,7 @@
       <version>2.2-M3</version>
       <scope>compile</scope>
     </dependency>
-  	<dependency>
+    <dependency>
       <groupId>ch.qos.logback</groupId>
       <artifactId>logback-core</artifactId>
       <version>1.0.13</version>
@@ -165,13 +164,20 @@
       <version>1.9.5</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.zeroturnaround</groupId>
+      <artifactId>zt-zip</artifactId>
+      <version>1.6</version>
+      <type>jar</type>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
   <build>
     <sourceDirectory>src/main/scala</sourceDirectory>
     <testSourceDirectory>src/test/scala</testSourceDirectory>
     <plugins>
-	  <plugin>
+      <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <version>2.14</version>
@@ -198,9 +204,9 @@
         <executions>
           <execution>
             <id>test</id>
-              <goals>
-                <goal>test</goal>
-              </goals>
+            <goals>
+              <goal>test</goal>
+            </goals>
           </execution>
         </executions>
       </plugin>
