--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -37,6 +37,11 @@
     </developer>
   </developers>
 
+  <properties>
+      <neo4j.version>2.0.0-M03</neo4j.version>
+      <spray.version>1.2-M8</spray.version>
+  </properties>
+
   <dependencies>
 
     <!-- Scala -->
@@ -50,21 +55,21 @@
     <dependency>
       <groupId>io.spray</groupId>
       <artifactId>spray-io</artifactId>
-      <version>1.2-M8</version>
+      <version>${spray.version}</version>
       <type>jar</type>
       <scope>compile</scope>
     </dependency>
     <dependency>
       <groupId>io.spray</groupId>
       <artifactId>spray-can</artifactId>
-      <version>1.2-M8</version>
+      <version>${spray.version}</version>
       <type>jar</type>
       <scope>compile</scope>
     </dependency>
     <dependency>
       <groupId>io.spray</groupId>
       <artifactId>spray-routing</artifactId>
-      <version>1.2-M8</version>
+      <version>${spray.version}</version>
       <type>jar</type>
       <scope>compile</scope>
     </dependency>
@@ -87,18 +92,11 @@
     <dependency>
       <groupId>org.neo4j.app</groupId>
       <artifactId>neo4j-server</artifactId>
-      <version>2.0.0-M03</version>
+      <version>${neo4j.version}</version>
       <type>jar</type>
       <scope>compile</scope>
     </dependency>
-    <dependency>
-      <groupId>org.extendedmind</groupId>
-      <artifactId>neo4j-uuid</artifactId>
-      <version>1.0-SNAPSHOT</version>
-      <type>jar</type>
-      <scope>compile</scope>
-    </dependency>
-
+ 
     <!-- Scaldi -->
     <dependency>
       <groupId>com.github.scaldi</groupId>
@@ -140,14 +138,14 @@
     <dependency>
       <groupId>io.spray</groupId>
       <artifactId>spray-testkit</artifactId>
-      <version>1.2-20130516</version>
+      <version>${spray.version}</version>
       <type>jar</type>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.neo4j</groupId>
       <artifactId>neo4j-kernel</artifactId>
-      <version>1.9</version>
+      <version>${neo4j.version}</version>
       <type>test-jar</type>
       <scope>test</scope>
     </dependency>
