--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -127,12 +127,12 @@
     </dependency>
 
     <!-- Security -->
-    <dependency>
-      <groupId>org.bouncycastle</groupId>
-      <artifactId>bcprov-jdk15on</artifactId>
-      <version>1.49</version>
-      <scope>compile</scope>
-    </dependency>
+	<dependency>
+		<groupId>commons-codec</groupId>
+		<artifactId>commons-codec</artifactId>
+		<version>1.8</version>
+		<scope>compile</scope>
+	</dependency>
 
     <!-- Test -->
     <dependency>
